manifests/mlflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow
  namespace: mlflow
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: mlflow-mlflow-basicauth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mlflow.krantzy.de
      secretName: mlflow-tls
  rules:
    - host: mlflow.krantzy.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mlflow-basicauth
  namespace: mlflow
spec:
  basicAuth:
    secret: mlflow-basicauth-secret
